src/objects/inscor__Company_Account_Approval__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Company Account Approvals</relationshipLabel>
        <relationshipName>Company_Account_Approvals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__CQ_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CQ Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Company Account Approvals</relationshipLabel>
        <relationshipName>Company_Account_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Lease_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lease Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__PO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__RFQ_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RFQ Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__RO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RO Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__SO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SO Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__WO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WO Approved</label>
        <type>Checkbox</type>
    </fields>
    <label>Company Account Approval</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Account__c</columns>
        <columns>inscor__Company__c</columns>
        <columns>inscor__CQ_Approved__c</columns>
        <columns>inscor__PO_Approved__c</columns>
        <columns>inscor__RFQ_Approved__c</columns>
        <columns>inscor__RO_Approved__c</columns>
        <columns>inscor__SO_Approved__c</columns>
        <columns>inscor__WO_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CAA-{0}</displayFormat>
        <label>Company Account Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Account Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>